# tv

./: Cargo.toml  README.md  rust-toolchain.toml
.github/: dependabot.yml
.github/workflows/: audit.yml  ci.yml  release.yml
.husky/hooks/: pre-commit
docs/: CODEBASE_ANALYSIS.md  Development.md  REFACTORING_EXAMPLE.md  TODO.md  install-dev-tools.sh  pre-commit  tv-demo.tape
examples/refactoring/: README.md  VISUAL_GUIDE.md
examples/refactoring/model/: mod.rs
examples/refactoring/model/views/: mod.rs  table_view.rs
src/: controller.rs  domain.rs  inputter.rs  main.rs  model.rs  popup.rs  table.rs  tui.rs  ui.rs
src/model/: column_view.rs  histogram_view.rs  mod.rs  model.rs  record_view.rs  table_view.rs  ui.rs
tests/fixtures/: testdata_01.csv  testdata_02.csv  testdata_04.csv  testdata_06.csv
