[package]
name = "tv"
version = "0.1.0"
edition = "2024"

[dependencies]
polars = { version = "0.52.0", features = ["lazy", "csv", "timezones"] }
ratatui = "0.30.0"
rayon = "1.11.0"
tokio = { version = "1.48.0", features = ["full"] }
tracing = "0.1.44"
tracing-error = "0.2.1"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }

[dev-dependencies]
husky-rs = "0.1.5"

# cargo build --release --target x86_64-unknown-linux-musl
[profile.release]
opt-level = 3
# opt-level = "z" # Optimize for size
lto = true # Link-time optimization
codegen-units = 1
strip = true # Strip symbols to reduce binary size
panic = "abort" # Abort on panic to reduce binary size