[package]
name = "tv"
version = "1.0.0-beta.2"
edition = "2024"
description = "A tui based tabular data viewer."
authors = ["Manuel Pasieka <manuel.pasieka@protonmail.ch>"]

[dependencies]
arboard = "3.6.1"
clap = { version = "4.5.54", features = ["derive"] }
derive_setters = "0.1.8"
polars = { version = "0.52.0", features = ["lazy", "csv", "timezones", "parquet", "ipc"] }
ratatui = "0.30.0"
rayon = "1.11.0"
shellexpand = { version = "3.1.1", features = ["full"] }
tracing = "0.1.44"
tracing-error = "0.2.1"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }

[dev-dependencies]
husky-rs = "0.1.5"
# Add car
# cargo-audit

# cargo build --release --target x86_64-unknown-linux-musl
[profile.release]
#opt-level = 3
opt-level = "z" # Optimize for size
lto = true # Link-time optimization
codegen-units = 1
strip = true # Strip symbols to reduce binary size
panic = "abort" # Abort on panic to reduce binary size
